@@ -5,6 +5,9 @@ Revision history for VCtools
 		`vc commands` no longer has "FILL ME IN" for some commands
 		`vc commit` now does a `verify = project`
 		`vc unstage` now accepts files (and therefore doesn't unstage everything when you request just one file)
+	*	modified commands:
+		vc info : can now ask for `def:command` or `def:%info`
+		vc help : now advises people to try `vc info def:command`
 	*	base command improvements:
 		vc help : rewritten so we have our own version (not relying on default from App::Cmd any more)
 
